cmake_minimum_required(VERSION 2.8)
project (sharbuf-all)

SET(SHARBUF_VERSION_MAJOR 0)
SET(SHARBUF_VERSION_MINOR 3)
SET(SHARBUF_VERSION_PATCH 1)
SET(SHARBUF_VERSION "${SHARBUF_VERSION_MAJOR}.${SHARBUF_VERSION_MINOR}.${SHARBUF_VERSION_PATCH}")

SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

CONFIGURE_FILE(
    "${PROJECT_SOURCE_DIR}/config.hpp.in"
    "${PROJECT_SOURCE_DIR}/src/lib/config.hpp"
)

add_subdirectory(src)
