cmake_minimum_required(VERSION 2.8)
SET(PROJECT pysharbuf)

SET(HEADERS
)

SET(MOC
)

SET(SOURCES
    Wrap.cpp
)

SET(BOOST_COMPONENTS
    python
)

SET(Boost_USE_MULTITHREADED ON)

SET(PYTHON_PATH /usr/include/python2.7)

add_definitions(-std=c++11)

PROJECT(${PROJECT})
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})
qt4_wrap_cpp(MOC_SOURCES ${MOC})

FIND_PACKAGE(Threads)
FIND_PACKAGE(Boost COMPONENTS ${BOOST_COMPONENTS} REQUIRED)
INCLUDE_DIRECTORIES(../lib ${PYTHON_PATH} )
ADD_LIBRARY(${PROJECT} SHARED
    ${HEADERS}
    ${SOURCES}
    ${MOC_SOURCES}
)

TARGET_LINK_LIBRARIES(${PROJECT}
    sharbuf
    ${CMAKE_THREAD_LIBS_INIT}
    ${QT_LIBRARIES}
    ${Boost_LIBRARIES}
)

SET_TARGET_PROPERTIES(${PROJECT} PROPERTIES ENABLE_EXPORTS true)

INSTALL(
    TARGETS
        pysharbuf
    LIBRARY DESTINATION lib COMPONENT runtime
    ARCHIVE DESTINATION lib COMPONENT developement
)
